fix layout problem

--- a/main.css
+++ b/main.css
@@ -274,21 +274,6 @@ color: #EBCA94;
 /*product detail start*/
 
 
-.Product_Review_form{
-  display:flex;
-  background-color: white;
- }
-
-
-
- .Product_Review_form div{
-
-  height:600px;
-
-  margin:5%;
-
-  flex-basis:50%;
- }
 
  .img_product img{
   width: 50%;
@@ -296,23 +281,7 @@ color: #EBCA94;
 
  }
 
- .img_product{
-    background-image: url("img/MysticSimpleHuggies.png");
-    background-size: cover;
- }
 
- .detail_project h2{
-    text-align: center;
-    padding-top: 3em;
-
- }
-
-  .detail_project h3{
-
-    padding-top: 3em;
-
-
-  }
 
 
 
@@ -383,6 +352,10 @@ border: 2px solid #272727;
 
 }
 
+.reviewPart{
+  margin-top: -35%;
+}
+
 
 
     .reviewPart div h4{
@@ -433,15 +406,15 @@ border: 2px solid #272727;
     text-align: center;
 
   }
-
+/*
   .reviewPart h4{
    padding-right: 6em;
-  }
+  }*/
 
   .detail_icon{
      margin-left: 20%;
-     margin-top: -1em;
-      margin-bottom:1em;
+     margin-top: -1%;
+      margin-bottom:1%;
   }
 
 
@@ -481,9 +454,10 @@ border: 2px solid #272727;
   margin-bottom: 4%;
  }
  .detail_structure .detail_left{
-   margin:2em;
+   margin:4%;
 
-  height:120px;
+  /*height:120px;*/
+  height: 100%;
 
    flex-basis:50%;
  
@@ -493,9 +467,10 @@ border: 2px solid #272727;
 
 
  .detail_structure .detail_right{
-   margin:2em;
+   margin:4%;
 
-  height:120px;
+  /*height:120px;*/
+  height: 100%;
 
 
    flex-basis:50%;
@@ -603,6 +578,11 @@ border: 2px solid #272727;
   #comments{
     padding-right: 40%;
   }
+
+
+  .reviewPart{
+  margin-top: 10%;
+}
 
 
 
@@ -725,17 +705,19 @@ border: 2px solid #272727;
 
  .about_structure div{
    flex-basis:50%;
+
  }
 
 
   .about_structure .about_left{
-   margin:2em;
+   margin:2%;
 
-  height:120px;
+
+  /*height: 50%;*/
 
    background-color: white;   
    flex-basis:50%;
-    padding-bottom: 60%;
+    /*padding-bottom: 60%;*/
 
 
  }
@@ -743,14 +725,14 @@ border: 2px solid #272727;
 
 
  .about_structure .about_right{
-   margin:1%;
+   margin:2%;
 
-  height:120px;
+  /*height:50%;*/
 
    background-color: white;   
 
    flex-basis:50%;
-    padding-bottom: 60%;
+    /*padding-bottom: 60%;*/
   
 
 
@@ -1728,7 +1710,8 @@ padding-bottom: 8%;
     color:#FFA8A8;
     font-size:22pt;
     
-    margin:0.3rem;
+    margin:2%;
+    margin-left: 5%;
 
 
   
@@ -1748,6 +1731,12 @@ padding-bottom: 8%;
   .ModularPatternElements-header_nav a{
    width:100%;
    text-align:center;
+  }
+
+
+  .ModularPatternElements-header{
+    padding-top: 2%;
+    padding-bottom: 2%;
   }
 
 
